compiler/tests/fixtures/valid/template_string_gap.viv
// Template string with a reference gap adjacent to punctuation

action greet-formally:
    roles:
        @greeter:
            as: initiator
        @guest:
            as: recipient
    gloss: "Welcome, @guest!"
