compiler/tests/fixtures/invalid/semantics/string_with_newline.viv
// Invalid: raw newlines are not permitted inside a string

action tell-story:
    roles:
        @hero:
            as: initiator
    gloss: "line one
line two"
